[package]
name = "database_prayer"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = {version="1.0.207", features=["derive"]}
serde_json = "1.0.124"
bincode = "1.3.3"
serde-big-array = "0.5.1"
tokio = { version = "1.39.2", features = ["full", "macros"] }
colored = "2.1.0"